--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 	
 						<div class="one-forth d-flex align-items-center ftco-animate" data-scrollax="properties: { translateY: '70%' }">
 							<div class="text" style="text-align: center;">
-								<h4 style="margin-bottom: 0;"><b>Hello..!</b></h4>
+								<h4 style="margin-bottom: 0;"><b>Welcome..!</b></h4>
 								<h1 class="mb-4 mt-3" style="font-size: 32px;">I'm <span>Uttam Kumar Varma Vummididevu</span></h1>
 								<h2 style="margin-bottom: 0;"><b>Software Test Engineer</b></h2>
 								<h2></h2>
