Updates for index.html

--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
 								<h2 class="mb-4">About Me</h2>
 
 								<p class="about-text">
-									Accomplished QA Engineer with over 2 years of experience in automation and manual
+									Accomplished QA Engineer with hands on experience in automation and manual
 									testing,
 									specializing in Selenium WebDriver, API testing, and security testing. Expertise in
 									developing
